# Simple-Database

./: CMakeLists.txt  LICENSE  README.md  main.cpp  person.cpp  person.h  professor.cpp  professor.h  student.cpp  student.h
